--- a/samples/debug/memfault/boards/nrf9160dk_nrf9160_ns.conf
+++ b/samples/debug/memfault/boards/nrf9160dk_nrf9160_ns.conf
@@ -5,7 +5,7 @@
 #
 
 # Modem library
-CONFIG_NRF_MODEM_LIB=y
+#CONFIG_NRF_MODEM_LIB=y
 
 # LTE link control
 CONFIG_LTE_LINK_CONTROL=y
@@ -14,7 +14,7 @@ CONFIG_PDN=y
 CONFIG_PDN_ESM_STRERROR=y
 
 # Network
-CONFIG_NET_NATIVE=n
+#CONFIG_NET_NATIVE=n
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
 
@@ -28,3 +28,21 @@ CONFIG_MODEM_KEY_MGMT=y
 # AT command capability in shell
 CONFIG_AT_SHELL=y
 CONFIG_SHELL_WILDCARD=n
+
+# Modem related configurations
+CONFIG_MODEM_INFO=y
+CONFIG_AT_HOST_LIBRARY=y
+CONFIG_NRF_MODEM_LIB_TRACE=y
+CONFIG_NRF_MODEM_LIB_NET_IF_AUTO_START=n
+CONFIG_NRF_MODEM_LIB_ON_FAULT_APPLICATION_SPECIFIC=y
+
+
+# Disable Duplicate Address Detection (DAD)
+# due to not being properly implemented for offloaded interfaces.
+CONFIG_NET_IPV6_NBR_CACHE=n
+CONFIG_NET_IPV6_MLD=n
+
+# Zephyr NET Connection Manager and Connectivity layer.
+CONFIG_NET_CONNECTION_MANAGER_STACK_SIZE=1024
+CONFIG_LTE_CONNECTIVITY=y
+CONFIG_LTE_CONNECTIVITY_AUTO_DOWN=n
