--- a/samples/debug/memfault/prj.conf
+++ b/samples/debug/memfault/prj.conf
@@ -18,15 +18,20 @@ CONFIG_MEMFAULT_SAMPLE_LOG_LEVEL_INF=y
 
 # Network
 CONFIG_NETWORKING=y
+CONFIG_NET_NATIVE=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=y
+CONFIG_NET_CONNECTION_MANAGER=y
 
 # DK
 CONFIG_DK_LIBRARY=y
 
 # Memfault
 CONFIG_MEMFAULT=y
-CONFIG_MEMFAULT_NCS_PROJECT_KEY=""
+CONFIG_MEMFAULT_NCS_PROJECT_KEY="bkv66xmVVUamCjphgLsT9M3PuynOjUCX"
 CONFIG_MEMFAULT_SHELL=y
 CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
+CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SECS=180
 CONFIG_MEMFAULT_LOGGING_ENABLE=y
 CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
 
@@ -49,3 +54,7 @@ CONFIG_STREAM_FLASH=y
 CONFIG_HEAP_MEM_POOL_SIZE=8192
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+
+
+
